# logx

./: .gitignore  CMakeLists.txt  README.md  biicode.conf
extras/cmake/: copy_media.txt  src_scanner.txt
include/: CMakeLists.txt  logx.hpp
include/logx/: additional_streams.hpp  annotation.hpp  config.hpp  core.hpp  core_service.hpp  dump.hpp  implementation.hpp  log.hpp  logger.hpp  sink.hpp  stdtags.hpp  stream_sink.hpp  tag.hpp  terminal_color.hpp  text_sink.hpp
include/logx/details/: base_message.hpp  char_conv.hpp  formatter.hpp  inplace_queue.hpp  list_message.hpp  memory.hpp  message.hpp  stream_packs.hpp  tag_annotation_pack.hpp
include/logx/sinks/: text_sink.hpp  xml_sink.hpp
samples/simple/: CMakeLists.txt  simle_impl.cpp  simple.cpp
src/: CMakeLists.txt  core.cpp  formatter.cpp  formatter.hpp  future_strand.hpp  inplace_queue.hpp  memory.hpp  sink_message.cpp  sink_message.hpp  stdtags.cpp
tests/: CMakeLists.txt  __module.cpp  test-module.cpp  test_settings.hpp  test_sinks.hpp
tests/interface/: additional_streams.cpp  msg_check.cpp
tests/internal/: future_strand_test.cpp  inplace_queue_test_.cpp
viewer/: logs.lst  test-log.xml  test-log2.xml  viever.html  viewer.js
